--- a/mainStyle.css
+++ b/mainStyle.css
@@ -245,6 +245,7 @@ body {
     margin-left:5%;
     margin-right:5%;
     height: 130px;
+    filter: drop-shadow(0 0 0.75rem gray);
     
 }
 .popularsImg Img {
@@ -264,6 +265,12 @@ body {
 }
 .d1 {
     height: 125px;
+}
+.popularsContainer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 
