--- a/mainStyle.css
+++ b/mainStyle.css
@@ -6,6 +6,7 @@ body {
     margin-left: 30px;
     font-family: 'Raleway', sans-serif;
 }
+
 .navHeader a {
     color: #0065fc;
     text-decoration: none;
@@ -95,6 +96,7 @@ body {
     color: black;
 }
 
+
 .filters {
     display: flex;
     margin-top:20px;
@@ -173,9 +175,7 @@ body {
     font-size: 40px;
     text-align: right;
 }
-.t2 > h2 {
-    margin-bottom: 0px;
-}
+
 .gapper {
     width: 20px;
 }
@@ -268,54 +268,122 @@ body {
 .d1 {
     height: 125px;
 }
+
 .popularsContainer {
     height: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
-/*
+
 .middleContent {
-    background-color:orange;
     margin-bottom: 60px;
 }
-/*
+
 .middleWrapper {
     display: flex;
     flex-direction: column;
     height: 800px;
-    background-color:purple;
     flex-wrap: wrap;
-    justify-content:space-between;
+    justify-content: space-between;
     margin-left: 40px;
 }
-/*
+
 .actText {
     width: 200px;
 }
+
 .activitiesBox {
     width: 22vw;
-    border-radius: 15px; 
+    border-radius: 15px;
+    background-color: white;
+    filter: drop-shadow(0 0 0.75rem gray);
 }
+
 .activitiesBox > img {
     width: 22vw;
-    height: 80%;
-    object-fit: cover;
+    height: 85%;
+    object-fit:cover;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
+
 .t3 {
     margin-left: 40px;
 }
-.activitiesLarge {
-    background-color: green;
-    height: 99%;
-}
 
+.activitiesLarge {
+    height: 100%;
+}
+.activitiesLarge > img {
+    height: 93%;
+}
 .activitiesSmall {
-    background-color: red;
     height: 45%;
+}
+.footer {
+    background-color:#f2f2f2;
+    margin-bottom: -8px;
+    margin-right: -8px;
+    margin-left: -30px;
+}
+.footWrapper {
+    padding-top:20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+.footColWrap {
+    margin-left: 15%;
+}
+.footTi {
+    font-weight: 800;
+}
+.actText {
+    font-weight: 900;
+    margin-top: 3%;
+    margin-left: 2%;
 }
 
 @media only screen and (max-width:800px) {
+    body {
+        margin-left: 0px;
+    }
+    .footColWrap {
+        margin-left: 0;
+        margin-top: 20px;
+    }
+    .d1 {
+        font-size: 0.9em;
+    }
+    .middleWrapper {
+        flex-wrap:nowrap;
+        height:auto;
+        margin-left: 2%;
+    }
+    .activitiesBox {
+        width: 99%;
+        height: 150px;
+        margin-bottom: 20px;
+    }
+    .activitiesBox > img {
+        width: 100%;
+        height: 70%;
+    }
+    .footWrapper {
+        flex-direction: column;
+        padding-left: 2%;
+    }
+    .footer {
+        margin-left: 0px;
+    }
+    .popularsContainer {
+        margin-top:40px;
+    }
+    .populars {
+        margin-bottom: 5px;
+    }
     .topTwo {
         margin-bottom: 10px;
     }
@@ -327,6 +395,7 @@ body {
     }
     .navHeader div:nth-child(1) {
         margin-left: 20px;
+        width: 10%;
     }
     .navHeader div:nth-child(3),.navHeader div:nth-child(4) { 
         border-top: 0px;
@@ -340,7 +409,7 @@ body {
         border-bottom: 3px solid #0065FC;
     }
     .navHeader div:nth-child(2) {
-        width:40%;
+        width:20%;
     }
     .navHeader div:nth-child(3) { 
         order: 4;
@@ -349,10 +418,6 @@ body {
     .navHeader div:nth-child(4) { 
         order: 5;
         width: 40%; 
-    }
-    .navHeader div:nth-child(5) { 
-        order: 3;
-        flex-grow: 1;
     }
     .searchForm button:nth-child(3){
         width: 100px;
@@ -374,6 +439,9 @@ body {
   .info {
       margin-left:15px;
   }  
+  body {
+        margin-left: 0px;
+    }
     .topContent {
         flex-wrap: wrap;
     }
@@ -387,7 +455,7 @@ body {
     }
     .title{
         text-align: center;
-        font-size:2em;
+        font-size:1em;
         margin-left: 0;
     }
     .t2 {
@@ -406,10 +474,9 @@ body {
         text-align:center;
     }
     .searchForm input[type=text] {
-        height: 100px;
+        height: 60px;
         width: 100%;
-        font-size: 3em;
-        transform: translateY(1px);
+        font-size: 1em;
     }
     .searchForm button:nth-child(3) span:nth-child(2) {
         display: inline;
@@ -418,35 +485,39 @@ body {
         display: none;
     }
     .searchForm button:nth-child(3){
-        width: 200px;
-        height: 100px;
+        width: 100px;
+        height: 64px;
         background-color: #0065FC;
         border: 1px solid #0065FC;
         border-top-right-radius: 20px;
         border-bottom-right-radius: 20px;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
         color: white;
         font-size: 3em;
         font-weight: 200;
         transition-duration: 0.4s;
+        transform: translateX(-10px);
     }
     .searchForm button:nth-child(1){
-      height: 100px;
-      width:100px;
-      font-size: 3em;
+      height: 64px;
+      width:64px;
+      font-size: 1.5em;
     }
     
     .logo {
-        width:15em;
+        width:8em;
     }
     .navHeader div:nth-child(5)
     {
-        font-size: 3em;
+        font-size: 1em;
+        text-align: right;
     }
     .headerText h1{
-        font-size:4em;
+        font-size:2em;
     }
     .headerText h3{
-        font-size:3em;
+        font-size:1em;
     }
     .navHeader {
         flex-wrap: wrap;
@@ -454,22 +525,9 @@ body {
         height:180px;
         
     }
-    .navHeader div:nth-child(1) {
-        margin-left: 20px;
-    }
-    .navHeader div:nth-child(3),.navHeader div:nth-child(4) { 
-        border-top: 0px;
-        border-bottom: 3px solid lightgray;
-        font-size: 3.5em;
-        margin: 0px;
-        text-align: center;
-    }
     .navHeader div:nth-child(3):hover,.navHeader div:nth-child(4):hover { 
         border-top: 0px;
         border-bottom: 3px solid #0065FC;
-    }
-    .navHeader div:nth-child(2) {
-        width:40%;
     }
     .navHeader div:nth-child(3) { 
         order: 4;
@@ -499,8 +557,8 @@ body {
       margin-top: 10px;
   }
   .filterBox div:nth-child(1) {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     text-align: center;
     font-size: 1em;
     
@@ -510,36 +568,33 @@ body {
     
 }
 .filterBox {
-    height: 90px;
-    font-size: 3em;
+    height: 40px;
+    font-size: 1em;
 }
 .filterText {
     width:80%;
 }
 .info p:nth-child(1) span, .info p:nth-child(1) {
-    font-size: 60px;
+    font-size: 40px;
 }
 
 .info p:nth-child(1) span {
-    padding: 0px 30px 0px 30px;
+    padding: 0px 20px 0px 20px;
 }
 
-}
 
-
-  @media only screen and (max-width: 505px){ 
-        .navHeader div:nth-child(2) {
-            width:30%;
+  @media only screen and (max-width: 505px){
+        body {
+            min-width: 320px;
         }
         .searchForm button:nth-child(3){
-            width: 50px;
-            font-size: 0.6em;
-            transform: translateY(-3px);
+            width: 64px;
+            font-size: 1.5em;
         }
        
     }
     
-
+}
 @media only screen and (min-width: 2200px)
 {
     .accommodations {
@@ -547,4 +602,4 @@ body {
       height: 340px;
     }
 }
-*/
+
