--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: white;
     margin-top: 0px;
@@ -114,7 +118,7 @@ body {
 }
 
 .filters div:nth-child(n+2) {
-    border: 2px solid #f2f2f2;
+    border: 2px solid #d9d9d9;
     margin-left:40px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -210,7 +214,7 @@ body {
 .accommodationsImg img{
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
@@ -251,9 +255,11 @@ body {
     
 }
 .popularsImg Img {
+    margin: 2px;
+    object-fit: cover;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
-    height:130px;
+    height:126px;
     width: 120px;
 }
 .p1 {
@@ -324,7 +330,6 @@ body {
 .footer {
     background-color:#f2f2f2;
     margin-bottom: -8px;
-    margin-right: -8px;
     margin-left: -30px;
 }
 .footWrapper {
@@ -332,7 +337,6 @@ body {
     padding-bottom: 20px;
     display: flex;
     flex-direction: row;
-    width: 100%;
 }
 .footColWrap {
     margin-left: 15%;
@@ -346,6 +350,59 @@ body {
     margin-left: 2%;
 }
 
+.filterBox:hover {
+
+    background-color:#0065FC;
+    color:#f2f2f2;   
+}
+
+.starsRating {
+    margin-bottom: 10px;
+}
+@media only screen and (max-width:1200px) {
+
+.middleWrapper {
+    flex-wrap:nowrap;
+    height:auto;
+    margin-left: 2%;
+}
+.activitiesBox {
+    width: 99%;
+    height: 150px;
+    margin-bottom: 20px;
+}
+.activitiesBox > img {
+    width: 100%;
+    height: 70%;
+}
+.topContent {
+    flex-wrap: wrap;
+}
+.topOne {
+    Width: 100%;
+    order: 2;
+}
+.topTwo {
+    width: 100%;
+    order: 1;
+}
+.title{
+    text-align: center;
+    font-size:1em;
+    margin-left: 0;
+}
+.t2 {
+    text-align: left;
+    margin-left: 2%;
+}
+.accommodations {
+    width:90vw;
+    height: 85vw;
+    border-radius: 15px;
+    margin-left:2%;
+    margin-bottom:2%;
+}
+}
 @media only screen and (max-width:800px) {
     body {
         margin-left: 0px;
@@ -364,7 +421,7 @@ body {
     }
     .activitiesBox {
         width: 99%;
-        height: 150px;
+        height: 220px;
         margin-bottom: 20px;
     }
     .activitiesBox > img {
@@ -373,7 +430,11 @@ body {
     }
     .footWrapper {
         flex-direction: column;
-        padding-left: 2%;
+        font-size: 2em;
+    }
+    .footCol {
+        margin-bottom:20px;
+        margin-left: 4%;
     }
     .footer {
         margin-left: 0px;
@@ -386,6 +447,10 @@ body {
     }
     .topTwo {
         margin-bottom: 10px;
+        margin-left: 0px;
+        margin-right: 0px;
+        border-radius: 0px;
+        
     }
     .navHeader {
         flex-wrap: wrap;
@@ -441,6 +506,7 @@ body {
   }  
   body {
         margin-left: 0px;
+        margin-right:0px;
     }
     .topContent {
         flex-wrap: wrap;
@@ -448,6 +514,7 @@ body {
     .topOne {
         Width: 100%;
         order: 2;
+        background-color: white;
     }
     .topTwo {
         width: 100%;
@@ -498,6 +565,7 @@ body {
         font-weight: 200;
         transition-duration: 0.4s;
         transform: translateX(-10px);
+        transform: translateY(10px);
     }
     .searchForm button:nth-child(1){
       height: 64px;
@@ -575,11 +643,11 @@ body {
     width:80%;
 }
 .info p:nth-child(1) span, .info p:nth-child(1) {
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .info p:nth-child(1) span {
-    padding: 0px 20px 0px 20px;
+    padding: 0px 10px 0px 10px;
 }
 
 
@@ -589,7 +657,8 @@ body {
         }
         .searchForm button:nth-child(3){
             width: 64px;
-            font-size: 1.5em;
+            font-size: 23px;
+            transform: translatex(-15px);
         }
        
     }
